--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,7 @@
-Source: mysql-5.7
+Source: mysql-wsrep-5.7
 Section: database
 Priority: optional
-Maintainer: Debian MySQL Maintainers <pkg-mysql-maint@lists.alioth.debian.org>
-Uploaders: Norbert Tretkowski <norbert@tretkowski.de>,
-           Clint Byrum <clint@ubuntu.com>,
-           James Page <jamespage@debian.org>,
-           Robie Basak <robie@justgohome.co.uk>
+Maintainer: Codership Oy <info@codership.com>
 Build-Depends: bison,
                chrpath,
                cmake,
@@ -20,6 +16,7 @@ Build-Depends: bison,
                libmecab-dev,
                libncurses5-dev (>= 5.0-6),
                libnuma-dev,
+               libssl-dev,
                libwrap0-dev (>= 7.6-8.3),
                lsb-release,
                perl,
@@ -27,16 +24,17 @@ Build-Depends: bison,
                psmisc,
                zlib1g-dev (>= 1:1.1.3-5)
 Standards-Version: 3.9.6
-Homepage: http://dev.mysql.com/
-Vcs-Git: git://anonscm.debian.org/pkg-mysql/mysql-5.7.git
-Vcs-Browser: https://anonscm.debian.org/cgit/pkg-mysql/mysql-5.7.git
-XS-Testsuite: autopkgtest
+Homepage: http://galeracluster.com/
+Vcs-Git: https://github.com/codership/mysql-wsrep.git
+Vcs-Browser: https://github.com/codership/mysql-wsrep
 
-Package: libmysqlclient20
+Package: mysql-wsrep-libmysqlclient20
 Section: libs
 Architecture: any
-Depends: mysql-common (>= 5.5), ${misc:Depends}, ${shlibs:Depends}
+Depends: mysql-wsrep-common (>= 5.5), ${misc:Depends}, ${shlibs:Depends}
 Pre-Depends: ${misc:Pre-Depends}
+Replaces: libmysqlclient20
+Provides: libmysqlclient20
 Multi-Arch: same
 Description: MySQL database client library
  MySQL is a fast, stable and true multi-user, multi-threaded SQL database
@@ -46,22 +44,10 @@ Description: MySQL database client library
  .
  This package includes the client library.
 
-Package: libmysqld-dev
+Package: mysql-wsrep-libmysqlclient-dev
 Architecture: any
 Section: libdevel
-Depends: libmysqlclient-dev (>= ${source:Version}), ${misc:Depends}
-Description: MySQL embedded database development files
- MySQL is a fast, stable and true multi-user, multi-threaded SQL database
- server. SQL (Structured Query Language) is the most popular database query
- language in the world. The main goals of MySQL are speed, robustness and
- ease of use.
- .
- This package includes the embedded server library and header files.
-
-Package: libmysqlclient-dev
-Architecture: any
-Section: libdevel
-Depends: libmysqlclient20 (= ${binary:Version}),
+Depends: mysql-wsrep-libmysqlclient20 (= ${binary:Version}),
          zlib1g-dev,
          ${misc:Depends},
          ${shlibs:Depends}
@@ -73,15 +59,17 @@ Description: MySQL database development files
  .
  This package includes development libraries and header files.
 
-Package: mysql-common
+Package: mysql-wsrep-common-5.7
 Architecture: all
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Provides: mysql-common-5.6
+Provides: mysql-common, mysql-common-5.7
 Conflicts: mariadb-server-5.5,
            mysql-common-5.6,
            mysql-server-5.5,
            percona-xtradb-cluster-common-5.5
 Replaces: mariadb-server-5.5,
+          mysql-common,
+          mysql-common-5.7,
           mysql-common-5.6,
           mysql-server-5.5,
           percona-xtradb-cluster-common-5.5
@@ -96,35 +84,22 @@ Description: MySQL database common files, e.g. /etc/mysql/my.cnf
  This package includes files needed by all versions of the client library,
  e.g. /etc/mysql/my.cnf.
 
-Package: mysql-client-core-5.7
-Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}
-Provides: virtual-mysql-client-core
-Conflicts: mysql-client-5.5, mysql-client-core-5.5, virtual-mysql-client-core
-Replaces: mysql-client-5.5,
-          mysql-client-core-5.5,
-          mysql-client-core-5.6 (<< 5.7),
-          virtual-mysql-client-core
-Breaks: mysql-client-core-5.6 (<< 5.7)
-Description: MySQL database core client binaries
- MySQL is a fast, stable and true multi-user, multi-threaded SQL database
- server. SQL (Structured Query Language) is the most popular database query
- language in the world. The main goals of MySQL are speed, robustness and
- ease of use.
- .
- This package includes the core client files, as used by Akonadi.
-
-Package: mysql-client-5.7
+Package: mysql-wsrep-client-5.7
 Architecture: any
 Depends: debianutils (>=1.6),
-         mysql-client-core-5.7,
-         mysql-common (>= 5.5),
+         libdbd-mysql-perl (>= 1.2202),
+         libdbi-perl,
+         libterm-readkey-perl,
+         mysql-wsrep-common-5.6,
+         mysql-wsrep-libmysqlclient18,
+         mysql-wsrep-common-5.7,
          ${misc:Depends},
+         ${perl:Depends},
          ${shlibs:Depends}
 Provides: virtual-mysql-client
 Conflicts: mysql-client-5.5, virtual-mysql-client
-Breaks: mysql-client-5.6 (<< 5.7), mysql-server-core-5.6 (<< 5.6.22-1~)
-Replaces: mysql-client-5.5, mysql-client-5.6 (<< 5.7), virtual-mysql-client
+Breaks: mysql-client-5.7, mysql-client-core-5.7, mysql-client-5.6, mysql-client-core-5.6, mysql-server-core-5.6 (<< 5.6.22-1~)
+Replaces: mysql-client-5.7, mysql-client-core-5.7, mysql-client-5.6, mysql-client-core-5.6, mysql-client-5.5, mysql-client-core-5.5, virtual-mysql-client
 Description: MySQL database client binaries
  MySQL is a fast, stable and true multi-user, multi-threaded SQL database
  server. SQL (Structured Query Language) is the most popular database query
@@ -134,57 +109,33 @@ Description: MySQL database client binaries
  This package includes the client binaries and the additional tools
  innotop and mysqlreport.
 
-Package: mysql-server-core-5.7
-Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}
-Provides: virtual-mysql-server-core
-Breaks: mariadb-client-10.0 (<< 10.0.16-2~),
-        mysql-client-5.6 (<< 5.6.22-1~),
-        mysql-server-5.6 (<< 5.6.25-3~),
-        mysql-server-core-5.6 (<< 5.7)
-Conflicts: mysql-client-5.5 (<< 5.6),
-           mysql-server-core-5.5,
-           virtual-mysql-server-core
-Replaces: mariadb-client-10.0 (<< 10.0.16-2~),
-          mysql-client-5.5 (<< 5.6),
-          mysql-client-5.6 (<< 5.6.22-1~),
-          mysql-server-5.6 (<< 5.6.25-3~),
-          mysql-server-core-5.5,
-          mysql-server-core-5.6 (<< 5.7),
-          virtual-mysql-server-core
-Description: MySQL database server binaries
- MySQL is a fast, stable and true multi-user, multi-threaded SQL database
- server. SQL (Structured Query Language) is the most popular database query
- language in the world. The main goals of MySQL are speed, robustness and
- ease of use.
- .
- This package includes the server binaries but doesn't contain all the
- infrastructure needed to setup system databases.
-
-Package: mysql-server-5.7
+Package: mysql-wsrep-server-5.7
 Architecture: any
 Recommends: libhtml-template-perl
 Suggests: mailx, tinyca
-Pre-Depends: adduser (>= 3.40), debconf, mysql-common (>= 5.5)
+Pre-Depends: adduser (>= 3.40), debconf, mysql-wsrep-common-5.7
 Depends: bsdutils,
          initscripts,
          lsb-base (>= 3.0-10),
-         mysql-client-5.7 (>= ${binary:Version}),
-         mysql-common (>= 5.6.22-1~),
-         mysql-server-core-5.7 (= ${binary:Version}),
+         lsof,
+         mysql-wsrep-client-5.7 (>= ${binary:Version}),
          passwd,
          perl (>= 5.6),
          psmisc,
+         rsync,
+         socat,
          ${misc:Depends},
          ${shlibs:Depends}
 Provides: virtual-mysql-server
 Conflicts: mysql-client-5.5, mysql-server-5.5, virtual-mysql-server
 Replaces: mysql-client-5.5,
           mysql-server-5.5,
-          mysql-server-5.6 (<< 5.7),
+          mysql-server-5.6,
+          mysql-server-5.7,
           virtual-mysql-server
-Breaks: mysql-server-5.6 (<< 5.7)
-Description: MySQL database server binaries and system database setup
+Breaks: mysql-server-5.6, mysql-server-core-5.6, mysql-server-5.7,
+        mysql-server-core-5.7, virtual-mysql-server
+Description: MySQL database wsrep server binaries and system database setup
  MySQL is a fast, stable and true multi-user, multi-threaded SQL database
  server. SQL (Structured Query Language) is the most popular database query
  language in the world. The main goals of MySQL are speed, robustness and
@@ -193,61 +144,23 @@ Description: MySQL database server binaries and system database setup
  This package contains all the infrastructure needed to setup system
  databases.
 
-Package: mysql-server
-Architecture: all
-Depends: mysql-server-5.7, ${misc:Depends}
-Description: MySQL database server (metapackage depending on the latest version)
- This is an empty package that depends on the current "best" version of
- mysql-server (currently mysql-server-5.7), as determined by the MySQL
- maintainers. Install this package if in doubt about which MySQL
- version you need. That will install the version recommended by the
- package maintainers.
- .
- MySQL is a fast, stable and true multi-user, multi-threaded SQL database
- server. SQL (Structured Query Language) is the most popular database query
- language in the world. The main goals of MySQL are speed, robustness and
- ease of use.
-
-Package: mysql-client
-Architecture: all
-Depends: mysql-client-5.7, ${misc:Depends}
-Description: MySQL database client (metapackage depending on the latest version)
- This is an empty package that depends on the current "best" version of
- mysql-client (currently mysql-client-5.7), as determined by the MySQL
- maintainers.  Install this package if in doubt about which MySQL version
- you want, as this is the one considered to be in the best shape by the
- Maintainers.
-
-Package: mysql-testsuite
-Architecture: all
-Depends: mysql-testsuite-5.7, ${misc:Depends}
-Description: MySQL regression tests
- This is an empty package that depends on the current "best" version of
- mysql-testsuite (currently mysql-testsuite-5.7), as determined by the
- MySQL maintainers.  Install this package if in doubt about which MySQL
- version you want, as this is the one we consider to be in the best shape.
-
-Package: mysql-testsuite-5.7
+Package: mysql-wsrep-testsuite-5.7
 Architecture: any
-Depends: mysql-client-5.7 (= ${binary:Version}),
-         mysql-server-5.7 (= ${binary:Version}),
+Depends: mysql-wsrep-client-5.7 (= ${binary:Version}),
+         mysql-wsrep-server-5.7 (= ${binary:Version}),
          python,
          ${misc:Depends},
          ${shlibs:Depends}
 Provides: virtual-mysql-testsuite
 Conflicts: mysql-testsuite-5.5, virtual-mysql-testsuite
-Replaces: mysql-client-5.5,
-          mysql-client-5.6,
-          mysql-server-5.5,
-          mysql-server-5.6,
-          mysql-testsuite-5.5,
-          mysql-testsuite-5.6 (<< 5.7),
+Replaces: mysql-testsuite-5.5,
+          mysql-testsuite-5.6,
+          mysql-testsuite-5.7,
           virtual-mysql-testsuite
-Breaks: mysql-client-5.5 (>= 5.5),
-        mysql-client-5.6 (>= 5.6),
-        mysql-server-5.5 (>= 5.5),
-        mysql-server-5.6 (>= 5.6),
-        mysql-testsuite-5.6 (<< 5.7)
+Breaks: mysql-testsuite-5.5,
+        mysql-testsuite-5.6,
+        mysql-testsuite-5.7,
+        virtual-mysql-testsuite
 Description: MySQL 5.7 testsuite
  MySQL is a fast, stable, and true multi-user, multi-threaded SQL database
  server.  SQL (Structured Query Language) is the most popular database query
@@ -256,15 +169,9 @@ Description: MySQL 5.7 testsuite
  .
  This package includes the MySQL testsuite.
 
-Package: mysql-source-5.7
+Package: mysql-wsrep-5.7
 Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}
-Description: MySQL source
- MySQL is a fast, stable, and true multi-user, multi-threaded SQL database
- server.  SQL (Structured Query Language) is the most popular database query
- language in the world. The main goals of MySQL are speed, robustness and
- ease of use.
- .
- This package includes the MySQL source code as configured before building
- - but after the arch specific configuration. This is currently required for
- building plugins.
+Depends: mysql-wsrep-client-5.7 (= ${binary:Version}),
+         mysql-wsrep-server-5.7 (= ${binary:Version}),
+         ${misc:Depends}
+Description: Metapackage that installs mysql-wsrep client and server packages.
