--- a/debian/control
+++ b/debian/control
@@ -69,8 +69,8 @@ Conflicts: mariadb-server-5.5,
            percona-xtradb-cluster-common-5.5
 Replaces: mariadb-server-5.5,
           mysql-common,
-          mysql-common-5.7,
           mysql-common-5.6,
+          mysql-common-5.7,
           mysql-server-5.5,
           percona-xtradb-cluster-common-5.5
 Breaks: mariadb-common (<< 10.0.20-3~)
@@ -91,15 +91,25 @@ Depends: debianutils (>=1.6),
          libdbi-perl,
          libterm-readkey-perl,
          mysql-wsrep-common-5.6,
-         mysql-wsrep-libmysqlclient18,
          mysql-wsrep-common-5.7,
+         mysql-wsrep-libmysqlclient18,
          ${misc:Depends},
          ${perl:Depends},
          ${shlibs:Depends}
 Provides: virtual-mysql-client
 Conflicts: mysql-client-5.5, virtual-mysql-client
-Breaks: mysql-client-5.7, mysql-client-core-5.7, mysql-client-5.6, mysql-client-core-5.6, mysql-server-core-5.6 (<< 5.6.22-1~)
-Replaces: mysql-client-5.7, mysql-client-core-5.7, mysql-client-5.6, mysql-client-core-5.6, mysql-client-5.5, mysql-client-core-5.5, virtual-mysql-client
+Breaks: mysql-client-5.6,
+        mysql-client-5.7,
+        mysql-client-core-5.6,
+        mysql-client-core-5.7,
+        mysql-server-core-5.6 (<< 5.6.22-1~)
+Replaces: mysql-client-5.5,
+          mysql-client-5.6,
+          mysql-client-5.7,
+          mysql-client-core-5.5,
+          mysql-client-core-5.6,
+          mysql-client-core-5.7,
+          virtual-mysql-client
 Description: MySQL database client binaries
  MySQL is a fast, stable and true multi-user, multi-threaded SQL database
  server. SQL (Structured Query Language) is the most popular database query
@@ -133,8 +143,11 @@ Replaces: mysql-client-5.5,
           mysql-server-5.6,
           mysql-server-5.7,
           virtual-mysql-server
-Breaks: mysql-server-5.6, mysql-server-core-5.6, mysql-server-5.7,
-        mysql-server-core-5.7, virtual-mysql-server
+Breaks: mysql-server-5.6,
+        mysql-server-5.7,
+        mysql-server-core-5.6,
+        mysql-server-core-5.7,
+        virtual-mysql-server
 Description: MySQL database wsrep server binaries and system database setup
  MySQL is a fast, stable and true multi-user, multi-threaded SQL database
  server. SQL (Structured Query Language) is the most popular database query
