--- a/mysql-test/suite/galera/t/galera_var_node_address.cnf
+++ b/mysql-test/suite/galera/t/galera_var_node_address.cnf
@@ -2,9 +2,11 @@
 
 [mysqld.2]
 wsrep_node_address=127.0.0.1
+wsrep_node_name=
 
 [mysqld.3]
 wsrep_node_address=localhost
+wsrep_node_name=my_host_3
 
 [mysqld.4]
 wsrep_node_address=lo
