--- a/packaging/rpm-oel/mysql.spec.in
+++ b/packaging/rpm-oel/mysql.spec.in
@@ -480,7 +480,7 @@ package has been split into several subpackages.
 # https://docs.fedoraproject.org/ro/Fedora_Draft_Documentation/0.1/html/RPM_Guide/ch09s04.html
 # http://rpm.org/max-rpm-snapshot/s1-rpm-inside-macros.html
 pushd mysql-%{compatver}
-patch -p 1 < ../%{src_dir}/packaging/libs-compat/%{compatch}
+patch -p 1 < ../%{src_dir}/packaging/rpm-libs-compat/%{compatch}
 popd
 %else
 %setup -q -T -a 0 -a 10 -c -n %{src_dir}
@@ -1130,6 +1130,10 @@ fi
 # %endif
 
 %changelog
+* Tue May 03 2016 Joerg Bruehe <joerg.bruehe@fromdual.com> - 5.7.10
+- Change the directory name for the "libs-compat" patches from
+  "packaging/libs-compat/" to "packaging/rpm-libs-compat/", like it was in 5.6.
+
 * Tue Mar 08 2016 Joerg Bruehe <joerg.bruehe@fromdual.com> - 5.7.10
 - Make the "libs-compat" subpackage stand-alone, drop its "requires"
   (which were wrong anyway, should have been to "common" rather than "libs"),
